# language-intermodulation

./: .gitignore  Dockerfile  Experiment_Structure.md  LICENSE  README.md  environment.yaml  error.pkl  error_log.pkl  even_one_word_stimuli.csv  even_two_word_stimuli.csv  evlab_fast_localizer.csv  flicker.py  flicker_test.py  flicker_test_mathieu.py  odd_one_word_stimuli.csv  odd_two_word_stimuli.csv  one_word_stimuli.csv  pyproject.toml  tasktest.py  testcont.csv  testcont_1w.csv  teststates.csv  teststates_1w.csv  two_word_stimuli.csv  two_word_stimuli_nina.csv  word_tagging_log.pkl  words_v1.csv
cluster_pipeline/: 00_recon_sub.sh  01_dataquality_sub.sh  02_headpos_sub.sh  03_maxfilter_sub.sh  04_ica_sub.sh  05_ica_regress.sh  06_source.sh  README.md
docker/: entrypoint.sh
docs/: ExperimentController_logic.md  code_structure.md
intermodulation/: analysis.py  events.py  exp_factory.py  experiments.py  freqtag_spec.py  generate_2w_states.py  plot.py  states.py  stimuli.py  utils.py
intermodulation/core/: __init__.py  _types.py  controller.py  events.py  states.py  stimuli.py  utils.py
intermodulation/tests/: fixtures.py  test_events.py  test_states.py  test_stimuli.py
intermodulation/tests/integration/: test_miniblock.py
intermodulation/tests/unit/: test_core.py  test_events.py  test_states.py  test_stimuli.py  test_utils.py
notebooks/: candidate_ftags.ipynb  check_ngrams.ipynb  examine_flicker_test.ipynb  examine_framerate_test.ipynb  theoretical_closest_f.ipynb
notebooks/analysis/: 00_pilotT_verify_photodiode.ipynb  01_pilotT_data_preprocess.ipynb  02_PilotT_data_sensorspace.ipynb  02_pilotT_data_sensorspace.ipynb  03_pilotT_find_the_weasel.ipynb  04_pilotT_sourcemodel.ipynb  pilot_data_analysis.ipynb
notebooks/analysis/task_analysis/: 04_pilotB_sourcemodel.ipynb
notebooks/design/: final_stimuli.ipynb
notebooks/testing/: examine_flicker_test.ipynb  examine_framerate_test.ipynb
scripts/: create_events_annot_bids.py  create_events_tsv.py  final_experiment.py  flicker_test.py  flicker_testing.py  flicker_testing_frame_count.py  framerate_test.py  framerate_testing.py  introduction_task.py  random_stim_selection.py  word_tagging.py
scripts/analysis/: 01_miniblock_events.py  02_subject_sensor_snr.py  03_coreg_landmarks.py  create_events_miniblock.py  create_events_tsv.py
scripts/design/: font_size_selection.py  random_stim_selection.py
scripts/experiments/: discrete_task.py  frequency_sweep.py  localizer.py  miniblock_task.py
scripts_testing/: builder_generated.py  flicker_testing.py  flicker_testing_frame_count.py  flicker_testing_mathieu.py  framerate_testing.py  photodiode_step.py  rewritten_builder.py  trigger_testing.py  word_tagging.py
word_ngrams/: 1grams_english_1b_with_pos.csv  2grams_english_1a_no_pos.csv  2grams_english_2_removed.csv  cons_clust_final_candidates.csv  final_P_NP_evensubs.csv  final_P_NP_oddsubs.csv  final_for_real_actually_V2_NW_stimuli.csv  final_nw_stimuli.csv  phrases_candidates.csv  phrases_final_candidates.csv
(+2 files in other folders)
