[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"


[project]
name = "intermodulation"
version = "0.1.0"
description = "Tools and scripts frequency tagging experiment on language syntax processing"
authors = [
    { name = "Berk Gercek", email = "berkgercek@duck.com" },
]
requires-python = ">=3.10"
dependencies = [
    "numpy",
    "pandas",
    "scipy",
    "scikit-learn",
    "tqdm",
    "matplotlib",
    "seaborn",
    "jupyter",
    "mne",
]

[project.optional-dependencies]
analysis = [
    "ipython",
    "black",
    "statsmodels",
    "mne[full]",
]
experiment = [
    "psychopy==2024.*"

]
full = [
    "intermodulation[analysis]",
    "intermodulation[experiment]",
]

[tool.black]
line-length = 99

[tool.pyright]
ignore = ["**/tests/**",]