[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"


[project]
name = "intermodulation"
version = "0.1.0"
description = "Tools and scripts frequency tagging experiment on language syntax processing"
authors = [
    { name = "Berk Gercek", email = "berkgercek@duck.com" },
]
requires-python = ">=3.10"
dependencies = [
    "attridict",
    "numpy",
    "pandas",
    "scipy",
    "scikit-learn",
    "tqdm",
    "matplotlib",
    "seaborn",
    "jupyter",
    "psychopy==2024.*",
    "psyquartz",
    "lazy-loader",
    "mnemonic",
    "byte-triggers",
]

[project.optional-dependencies]
analysis = [
    "ipython",
    "statsmodels",
    "mne",
    "mne-bids",
    "mne-bids-pipeline",
]
testing = [
    "pytest",
    "pytest-mock",
    "pytest-cov",
    "ruff",
]
psych-minimal = [
    "tables",
    "json-tricks",
    "pyglet",
    "pyserial",
    "pillow",
    "imageio",
    "imageio-ffmpeg",
    "msgpack-numpy",
    "msgpack",
]
full = [
    "intermodulation[analysis]",
    "intermodulation[testing]",
]

[tool.pyright]
ignore = [
    "**/tests/**",
    "*.ipynb",
    ]
typeCheckingMode = "off"

[tool.pytest.ini_options]
addopts = "--cov=intermodulation --cov-report xml:cov.xml"

[tool.ruff]
extend-include = ["*.ipynb"]
